--- a/style.css
+++ b/style.css
@@ -348,35 +348,258 @@
   background-color: #8A8A84;
 }
 
-/* Sections */
-.evenements {
-    padding: 2rem;
-}
-.evenements h3 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 1rem;
+.instagram{
+  height: 191px;
+  background-color: #8A8A84;
+  display: flex;
+  align-items: center;
+  padding: 0 170px;
 }
 
-/* Newsletter */
+.inst-left{
+  display: flex;
+  align-items: center;
+}
+
+.instagram img{
+  max-height: 100px;
+  max-width: 100px;
+  border-radius: 50%;
+  margin-right: 33px;
+}
+
+.instagram h3{
+  font-size: 24px;
+  color: #ffffff;
+  font-family: 'Jomolhari', serif;
+  font-weight: 300;
+  letter-spacing: 0.1em;
+}
+
+.instagram p{
+  font-size: 16px;
+  color: #ffffff;
+  letter-spacing: 0.1em;
+  margin: 5px 0 0;
+}
+
+.suivre{
+  width: 207px;
+  height: 50px;
+  background-color: #dbd8d0;
+  border: none;
+  text-align: center;
+  color: #000000;
+  font-size: 20px;
+  font-family: 'Jomolhari', serif;
+  font-weight: 300;
+  letter-spacing: 0.1em;
+  cursor: pointer; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s ease;
+  margin-left: auto;
+ }
+
+.suivre:hover{
+  background-color: #ffffff;
+  border: #dbd8d0 3.5px solid;
+  transform: scale(1.1);
+ }
+ .évènements {
+  max-width: 1440px;
+  font-family: 'Josefin Sans';
+  letter-spacing: 0.1em;
+  height: 758px;
+  margin: 0 auto;
+  padding: 90px 93px;
+ }
+
+ .section-title1{
+  font-size: 40px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom: 50px;
+ }
+
+ .events-gallery {
+  display: flex;
+  gap: 20px;
+}
+
+.event {
+  position: relative; 
+}
+
+.event-right{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-left: 50px;
+  
+}
+
+ .im1{
+  width: 477px;
+  height: 446px;
+  object-fit: cover;
+ }
+
+ .im2{
+  width: 702px;
+  height: 209px;
+  object-fit: cover;
+  object-position: center 25%;
+ }
+
+ .overlay{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 95px;
+  background: #ffffff;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 20px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.event:hover .overlay {
+opacity: 75%;
+}
+
+.nom1 {
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.time {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.line2 {
+  max-width: 1346px;
+  margin-top: 77px;
+}
+
+.line2 hr {
+  border: none;
+  height: 1px;
+  background-color: #dbd8d0;
+  width: 100%;
+}
 .newsletter {
-    background-color: #f0f0f0;
-    padding: 2rem;
-    text-align: center;
-}
-.newsletter input {
-    padding: 0.5rem;
-    margin-right: 0.5rem;
+  height: 202px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #DBD8D0;
+  padding: 0 68px;
 }
 
-/* Footer */
-footer {
-    display: flex;
-    justify-content: space-around;
-    padding: 1rem;
-    background-color: #333;
-    color: #f0f0f0;
+.newsletter h3{
+  font-size: 26px;
+  color: #000000;
+  font-family: 'Jomolhari', serif;
+  font-weight: 300;
+  letter-spacing: 0.1em;
 }
-footer div p {
-    margin-bottom: 0.5rem;
+
+.newsletter p{
+  font-size: 16px;
+  color: #000000;
+  letter-spacing: 0.1em;
+  margin: 5px 0 0; 
+}
+
+.abonnez{
+  display: flex;
+  flex-direction: column;
+}
+
+.newsletter form {
+  display: flex;
+  flex-direction: column; 
+  gap: 20px;
+  align-items: flex-end;
+  margin-right: 100px;
+}
+
+.newsletter input {
+  padding: 20px;
+  font-size: 16px;
+  width: 298px;
+  height: 46px;
+  border: none;
+}
+
+.newsletter button {
+  width: 207px; 
+  height: 50px;
+  background-color: #8A8A84; 
+  color: #ffffff; 
+  border: none; 
+  font-size: 20px; 
+  font-family: 'Jomolhari', serif;
+  font-weight: 300;
+  letter-spacing: 0.1em;
+  cursor: pointer;  
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease; 
+}
+
+.newsletter button:hover {
+  transform: scale(1.1);
+}
+
+footer {
+  display: flex;
+  justify-content: space-around;
+  background-color: #ffffff;
+  margin-bottom: 30px;
+}
+
+footer p {
+  margin-bottom: 20px;
+  color: #000000;
+  font-size: 16px;
+  letter-spacing: 0.1em;
+}
+
+footer h4{
+  color: #8A8A84;
+  margin-bottom: 26px;
+  margin-top: 50px;
+  font-size: 18px;
+  letter-spacing: 0.1em;
+}
+
+.icones{
+  display: flex;
+  gap: 20px;
+}
+
+.icones i{
+  margin-top: 45px;
+  color: #8A8A84;
+  font-size: 26px;
+  transition: transform 0.3s ease, color 0.3s ease;
+
+}
+
+.icones i:hover{
+transform: scale(1.1);
+color: #DBD8D0;
 }
