--- a/style.css
+++ b/style.css
@@ -44,13 +44,12 @@
     overflow: hidden;
   }
 
-  .header h1{
+  h1{
     font-size: 33px;
     margin-left: 140px;
     font-weight: 400;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    align-items: center;
     white-space: nowrap; 
     color: #000000;
   }
