--- a/style.css
+++ b/style.css
@@ -607,7 +607,6 @@ color: #DBD8D0;
 
     body {
         max-width: 100%;
-        padding: 0 20px;
     }
 
     .header {
@@ -714,6 +713,7 @@ color: #DBD8D0;
         flex-direction: column;
         padding: 20px;
         text-align: center;
+        height: 270px;
     }
 
     .inst-left {
@@ -730,8 +730,11 @@ color: #DBD8D0;
     .suivre {
         width: 100%;
         margin-left: 0; 
-        margin-top: 20px;
         max-width: 250px;
+    }
+
+    .suivez-nous p{
+    display: none;
     }
 
     /* Évènements */
@@ -743,6 +746,7 @@ color: #DBD8D0;
     .section-title1 {
         font-size: 28px;
         margin-bottom: 30px;
+        text-align: center;
     }
 
     .events-gallery {
@@ -766,7 +770,8 @@ color: #DBD8D0;
     }
 
     .nom1 {
-        font-size: 20px;
+        font-size: 19px;
+        text-wrap: nowrap;
     }
 
     .time {
@@ -784,6 +789,10 @@ color: #DBD8D0;
         align-items: center;
         text-align: center;
         margin-bottom: 20px;
+    }
+
+    .abonnez p{
+    display: none;
     }
 
     .newsletter form {
@@ -808,11 +817,8 @@ color: #DBD8D0;
         flex-direction: column;
         align-items: center;
         text-align: center;
-        padding: 20px 0;
-    }
-
-    footer > div {
-        margin-bottom: 20px;
+        padding: 15px 0 10px 0;
+        gap: 5px;
     }
 
     .icones {
@@ -820,7 +826,7 @@ color: #DBD8D0;
     }
 
     .icones i {
-        margin-top: 0;
+        margin-top: 15px;
     }
 
     .dots, .dots1 {
