--- a/style.css
+++ b/style.css
@@ -174,10 +174,15 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  background-image: url('images/galerie.png'); 
-  background-size: cover; 
-  background-position: center;
+  overflow: hidden;
+  position: relative;
   box-sizing: border-box;
+ }
+
+.frame2 img{
+  width: 100%;
+  height: auto;
+  object-fit: cover;
  }
 
 .line{
@@ -650,18 +655,40 @@ color: #DBD8D0;
 
     .propos-container {
         flex-direction: column;
+        align-items: center;
+        text-align: left;
     }
 
-    .frame1, .frame2 {
+    .frame1{
         width: 100%;
-        max-width: 100%;
         padding: 50px 20px;
         height: auto;
+        text-align: center;
     }
 
+    .frame2 {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: auto;
+    max-width: 90%;
+  }
+
+    .frame2 img{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+
     .propos {
-        align-items: center;
-        text-align: center;
+    display: flex;
+    flex-direction: column;  
+    align-items: flex-start;
+    text-align: left;
+    margin-left: 20px;
     }
 
     .ddc {
@@ -676,7 +703,9 @@ color: #DBD8D0;
 
     .decouvrir {
         width: 100%;
-        max-width: 250px;
+      max-width: 200px;
+      font-size: 16px;
+      margin-top: 5px;
     }
 
     .oeuvres-slider .gallery-item {
