--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@
 
 .instagram{
   height: 191px;
-  background-color: #8A8A84;
+  background-color: #979692;
   display: flex;
   align-items: center;
   padding: 0 170px;
