--- a/style.css
+++ b/style.css
@@ -824,7 +824,7 @@ color: #DBD8D0;
     .section-title1 {
         font-size: 28px;
         margin-bottom: 30px;
-        text-align: center;
+        text-align: left;
     }
 
     .events-gallery {
