--- a/style.css
+++ b/style.css
@@ -579,6 +579,17 @@ opacity: 75%;
   transform: scale(1.1);
 }
 
+.email-label{
+    position: absolute; 
+    width: 1px; 
+    height: 1px; 
+    padding: 0; 
+    overflow: hidden; 
+    clip: rect(0, 0, 0, 0); 
+    white-space: nowrap; 
+    border: 0;
+    }
+         
 footer {
   display: flex;
   justify-content: space-around;
