--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
 
  .menu-list a{
   text-decoration: none;
-  font-size: clamp (12px, 2vw, 18px);
+  font-size: 18px;
   text-transform: uppercase;
   color: #000000;
  }
