--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@
   letter-spacing: 0.1em;
   height: 758px;
   margin: 0 auto;
-  padding: 90px 93px;
+  padding: 90px 50px 90px 70px;
  }
 
  .section-title1{
