--- a/page2.css
+++ b/page2.css
@@ -49,7 +49,7 @@ p{
 
 .line3{
     max-width: 90%;
-    margin: 0 auto 0 auto;
+    margin: 30px auto 0 auto;
     background-color: #dbd8d0;
     height: 1px;
     border: none;
