--- a/page2.css
+++ b/page2.css
@@ -9,7 +9,7 @@
     flex-wrap: wrap; 
     margin: 0 auto;
     max-width: 1440px; 
-    padding-top: 90px;
+    padding-top: 50px;
 }
   
 .histoire-photo{
@@ -25,7 +25,7 @@
     object-fit: cover;
 }
 
-.histoire-texte, .dechewsky{
+.histoire-texte{
     max-width: 40%; 
     text-align: left;
     font-family: 'Josefin Sans';
@@ -49,7 +49,7 @@ p{
 
 .line3{
     max-width: 90%;
-    margin: 30px auto 0 auto;
+    margin: 50px auto 0 auto;
     background-color: #dbd8d0;
     height: 1px;
     border: none;
@@ -57,10 +57,8 @@ p{
 }
 
 .fondateur{
-display: flex;
+    display: flex;
     flex-direction: row; 
-    justify-content: flex-start; 
-    gap: 60px;
     align-items: center; 
     flex-wrap: wrap; 
     margin: 0 auto;
@@ -69,15 +67,21 @@ display: flex;
 }
 
 .dechewsky{
-    flex-direction: column;;
+    max-width: 40%; 
+    text-align: left;
+    font-family: 'Josefin Sans';
+    line-height: 1.5;
+    margin-left: 35px;
 }
 
 .dechewsky-photo{
     display: flex;
-    flex-direction: column;
+    max-width: 50%;
+    margin-left: auto;
 }
 
 .dechewsky-photo img{
-    width: 728px;
-    height: 540px;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
