--- a/page2.css
+++ b/page2.css
@@ -85,3 +85,43 @@ p{
     height: auto;
     object-fit: cover;
 }
+
+@media (max-width: 768px) {
+    .histoire {
+        flex-direction: column;
+        gap: 20px; 
+        padding-top: 30px;
+    }
+
+    .fondateur{
+        flex-direction: column;
+        gap: 20px; 
+        padding-top: 50px; 
+    }
+
+
+    .histoire-photo, .dechewsky-photo {
+        max-width: 100%;
+        margin-left: 0; 
+    }
+
+    .histoire-texte, .dechewsky {
+        max-width: 100%;
+        margin-left: 0; 
+        text-align: left;
+    }
+
+    h2 {
+        font-size: 24px; 
+        text-align: left;
+        margin-bottom: 15px;
+    }
+
+    p {
+        font-size: 18px; 
+    }
+
+    .line3 {
+        margin-top: 30px;
+    }
+}
