--- a/page2.css
+++ b/page2.css
@@ -91,6 +91,7 @@ p{
         flex-direction: column;
         gap: 20px; 
         padding-top: 30px;
+        flex-wrap: wrap;
     }
 
     .fondateur{
@@ -106,7 +107,7 @@ p{
 
     .histoire-texte {
         max-width: 100%; 
-        margin-left: 12px; 
+        margin-left: 15px; 
         text-align: left; 
     }
     
