--- a/page2.css
+++ b/page2.css
@@ -107,7 +107,7 @@ p{
 
     .histoire-texte {
         max-width: 100%; 
-        margin-left: 20px; 
+        margin-left: 0;
         text-align: left; 
     }
     
