--- a/page2.css
+++ b/page2.css
@@ -113,7 +113,7 @@ p{
     
     .dechewsky {
         max-width: 100%;
-        margin-left: 0; 
+        margin-left: 15px; 
         text-align: left;
     }
 
